tests/expectations/compiler/constructor/calls_in_constructors_fail.out
Error [ETYC0372042]: Only regular fns can be called from a regular function or constructor.
    --> compiler-test:12:9
     |
  12 |         bar();
     |         ^^^^^
